--- a/js/style.css
+++ b/js/style.css
@@ -13,22 +13,20 @@ body {
 
 .container {
   margin: 0 auto;
-  margin-top: 5vh;
+  margin-top: 10px;
   width: 66%;
-  height: 80vh;
+  height: 70vh;
   border-radius: 8px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
 .container .playerOneCard {
-  background: rgba(230, 230, 230, 0.7);
   text-align: center;
   display: grid;
   justify-content: center;
   align-items: center;
 }
 .container .playerTwoCard {
-  background: rgba(230, 230, 230, 0.4);
   text-align: center;
   display: grid;
   justify-content: center;
@@ -64,6 +62,18 @@ body {
   font-size: 150%;
 }
 
+.dice {
+  width: 3.5rem;
+  height: 3.5rem;
+  background: #fff;
+  margin: 0 auto;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5vh;
+  cursor: pointer;
+}
+
 .menu {
   list-style: none;
   margin: 0 auto;
@@ -79,6 +89,14 @@ body {
   margin-top: 10px;
   text-align: center;
   cursor: pointer;
+}
+
+.role {
+  background: rgba(230, 230, 230, 0.7);
+}
+
+.notRole {
+  background: rgba(230, 230, 230, 0.4);
 }
 
 /*# sourceMappingURL=style.css.map */
