--- a/js/style.css
+++ b/js/style.css
@@ -1,6 +1,9 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 body {
@@ -66,6 +69,7 @@ body {
   width: 3.5rem;
   height: 3.5rem;
   background: #fff;
+  border-radius: 5px;
   margin: 0 auto;
   display: grid;
   justify-content: center;
@@ -97,6 +101,68 @@ body {
 
 .notRole {
   background: rgba(230, 230, 230, 0.4);
+}
+
+.modalBackdrop {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.modalBackdrop .modal {
+  width: 300px;
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+  line-height: 50px;
+  animation: zoomIn 0.6s ease-in;
+}
+.modalBackdrop .modal h2 {
+  font-weight: normal;
+}
+.modalBackdrop .modal #modalNewGameBtn {
+  padding: 20px;
+  background: linear-gradient(to right, rgb(10, 173, 10), rgb(5, 202, 202));
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 100px;
+  margin-top: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+.modalBackdrop .modal #isSureBtn {
+  padding: 20px;
+  background: green;
+  color: #fff;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  margin-top: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+.modalBackdrop .modal #isNotSureBtn {
+  padding: 20px;
+  background: red;
+  color: #fff;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  margin-top: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+
+@keyframes zoomIn {
+  0% {
+    transform: scaleX(0.2) scaleY(0.2);
+  }
+  100% {
+    transform: scaleX(1) scaleY(1);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
