--- a/js/style.css
+++ b/js/style.css
@@ -17,7 +17,7 @@ body {
 .container {
   margin: 0 auto;
   margin-top: 10px;
-  width: 66%;
+  width: 80%;
   height: 70vh;
   border-radius: 8px;
   display: grid;
@@ -50,7 +50,8 @@ body {
 }
 
 .playerCardFooter {
-  width: 100px;
+  width: 80px;
+  margin: 0 auto;
   padding: 20px;
   background: crimson;
   border-radius: 5px;
